test/compile_errors/err_channel_send_wrong_type.w
//! expect-error: argument

fn main:
    let (tx, _rx) = chan[i32](1)
    tx.send("not an int")
